some more webpack config

--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "dependencies": {
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "echo WIP"
+    }
   }
 }
